--- a/three.html
+++ b/three.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="2.js"></script>
+    <script src="three.js"></script>
 </body>
 </html>
